update chat bot example

--- a/notebooks/generative-ai/chatbot.ipynb
+++ b/notebooks/generative-ai/chatbot.ipynb
@@ -47,15 +47,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langchain in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (0.0.139)\n",
+      "Collecting langchain\n",
+      "  Obtaining dependency information for langchain from https://files.pythonhosted.org/packages/f2/42/01aa982897eb3829f04e9a8c1c761e2a61ae944a0cbc90bcc978fe3c02ae/langchain-0.0.271-py3-none-any.whl.metadata\n",
+      "  Downloading langchain-0.0.271-py3-none-any.whl.metadata (14 kB)\n",
+      "Requirement already satisfied: openai in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (0.27.4)\n",
+      "Collecting openai\n",
+      "  Obtaining dependency information for openai from https://files.pythonhosted.org/packages/a0/19/7e39855c63b68ef15b1c2c9e4d941026fb0c94940979e161bb5b470f8455/openai-0.27.9-py3-none-any.whl.metadata\n",
+      "  Downloading openai-0.27.9-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: elasticsearch in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (8.9.0)\n",
+      "Requirement already satisfied: tiktoken in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (0.4.0)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (6.0)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (1.4.47)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (3.8.4)\n",
+      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (4.0.2)\n",
+      "Requirement already satisfied: dataclasses-json<0.6.0,>=0.5.7 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (0.5.7)\n",
+      "Collecting langsmith<0.1.0,>=0.0.21 (from langchain)\n",
+      "  Obtaining dependency information for langsmith<0.1.0,>=0.0.21 from https://files.pythonhosted.org/packages/94/af/c01937934a8d6e5e4f620a9c6013dc8b0d1a9f02a2a183761426f5ea67b6/langsmith-0.0.26-py3-none-any.whl.metadata\n",
+      "  Downloading langsmith-0.0.26-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting numexpr<3.0.0,>=2.8.4 (from langchain)\n",
+      "  Obtaining dependency information for numexpr<3.0.0,>=2.8.4 from https://files.pythonhosted.org/packages/56/ed/ee046f0cd9d9a01002f4c2efa5f78dcb9e4e7a078d88ea182a79e8ef1ce3/numexpr-2.8.5-cp310-cp310-macosx_11_0_arm64.whl.metadata\n",
+      "  Using cached numexpr-2.8.5-cp310-cp310-macosx_11_0_arm64.whl.metadata (8.0 kB)\n",
+      "Requirement already satisfied: numpy<2,>=1 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (1.24.2)\n",
+      "Requirement already satisfied: pydantic<3,>=1 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (1.10.7)\n",
+      "Requirement already satisfied: requests<3,>=2 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (2.30.0)\n",
+      "Requirement already satisfied: tenacity<9.0.0,>=8.1.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from langchain) (8.2.2)\n",
+      "Requirement already satisfied: tqdm in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from openai) (4.65.0)\n",
+      "Requirement already satisfied: elastic-transport<9,>=8 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from elasticsearch) (8.4.0)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from tiktoken) (2023.6.3)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (22.2.0)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (3.1.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.4)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.8.2)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.3)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.3.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain) (3.19.0)\n",
+      "Requirement already satisfied: marshmallow-enum<2.0.0,>=1.5.1 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain) (1.5.1)\n",
+      "Requirement already satisfied: typing-inspect>=0.4.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from dataclasses-json<0.6.0,>=0.5.7->langchain) (0.8.0)\n",
+      "Requirement already satisfied: urllib3<2,>=1.26.2 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from elastic-transport<9,>=8->elasticsearch) (1.26.15)\n",
+      "Requirement already satisfied: certifi in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from elastic-transport<9,>=8->elasticsearch) (2022.12.7)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from pydantic<3,>=1->langchain) (4.5.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from requests<3,>=2->langchain) (3.4)\n",
+      "Requirement already satisfied: packaging>=17.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.3.0->dataclasses-json<0.6.0,>=0.5.7->langchain) (23.1)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /Users/joe/.pyenv/versions/3.10.3/lib/python3.10/site-packages (from typing-inspect>=0.4.0->dataclasses-json<0.6.0,>=0.5.7->langchain) (1.0.0)\n",
+      "Downloading langchain-0.0.271-py3-none-any.whl (1.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.5/1.5 MB\u001b[0m \u001b[31m9.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hDownloading openai-0.27.9-py3-none-any.whl (75 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.5/75.5 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading langsmith-0.0.26-py3-none-any.whl (34 kB)\n",
+      "Using cached numexpr-2.8.5-cp310-cp310-macosx_11_0_arm64.whl (90 kB)\n",
+      "Installing collected packages: numexpr, langsmith, openai, langchain\n",
+      "  Attempting uninstall: openai\n",
+      "    Found existing installation: openai 0.27.4\n",
+      "    Uninstalling openai-0.27.4:\n",
+      "      Successfully uninstalled openai-0.27.4\n",
+      "  Attempting uninstall: langchain\n",
+      "    Found existing installation: langchain 0.0.139\n",
+      "    Uninstalling langchain-0.0.139:\n",
+      "      Successfully uninstalled langchain-0.0.139\n",
+      "Successfully installed langchain-0.0.271 langsmith-0.0.26 numexpr-2.8.5 openai-0.27.9\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install -U langchain==0.0.245 openai elasticsearch tiktoken"
+    "%pip install -U langchain openai elasticsearch tiktoken"
    ]
   },
   {
@@ -69,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,73 +155,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With these credentials we can now initialize the Elasticsearch Python client."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to Elasticsearch\n",
-      " {'name': 'instance-0000000000', 'cluster_name': 'dacecbd336e6450d882c8adef9d131eb', 'cluster_uuid': 'PIWjifvgTcW7iV5zJmu0PA', 'version': {'number': '8.9.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '8aa461beb06aa0417a231c345a1b8c38fb498a0d', 'build_date': '2023-07-19T14:43:58.555259655Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from elasticsearch import Elasticsearch\n",
-    "\n",
-    "elasticsearch_client = Elasticsearch(\n",
-    "    cloud_id=ELASTIC_CLOUD_ID,\n",
-    "    basic_auth=(ELASTIC_USERNAME, ELASTIC_PASSWORD)\n",
-    ")\n",
-    "\n",
-    "print(\"Connected to Elasticsearch\\n\", elasticsearch_client.info())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create index 🗄️\n",
-    "\n",
-    "We'll create an Elasticsearch index to store documents along with the generated vector embeddings. This will allow us to execute vector search when retrieving documents for our query.\n",
-    "\n",
-    "Since we're using OpenAI's `text-embedding-ada-002` model, we need a 1536-dimensional [dense_vector](https://www.elastic.co/guide/en/elasticsearch/reference/current/dense-vector.html) field to store the embeddings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mappings = {\n",
-    "    \"properties\": {\n",
-    "        \"text\": { \"type\": \"keyword\" },\n",
-    "        \"vector\": {\n",
-    "            \"type\": \"dense_vector\",\n",
-    "            \"dims\": 1536,\n",
-    "            \"index\": True,\n",
-    "            \"similarity\": \"cosine\"\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "elasticsearch_client.indices.create(\n",
-    "    index=\"workplace-docs\",\n",
-    "    mappings=mappings\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Load and process documents 📄\n",
     "\n",
     "Time to load some data! We'll be using the workplace search example data, which is a list of employee documents and policies."
@@ -159,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -246,47 +249,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated 73 embeddings\n",
-      "Indexed 73 documents\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from langchain.vectorstores import ElasticsearchStore\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "\n",
-    "# Get the embeddings from openAI\n",
     "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
-    "# Extract page_content from the documents\n",
-    "texts = list(map(lambda t: t.page_content, docs))\n",
-    "\n",
-    "text_embeddings = embeddings.embed_documents(texts)\n",
-    "\n",
-    "print(f\"Generated {len(text_embeddings)} embeddings\")\n",
-    "\n",
-    "# Persist the passage documents into Elasticsearch\n",
-    "actions = []\n",
-    "for i, passage in enumerate(docs):\n",
-    "    actions.append({\"index\": {}})\n",
-    "    actions.append({\n",
-    "        \"text\": passage.page_content,\n",
-    "        \"vector\": text_embeddings[i],\n",
-    "        \"metadata\": passage.metadata\n",
-    "    })\n",
-    "\n",
-    "bulk_response = elasticsearch_client.bulk(\n",
-    "    operations=actions,\n",
-    "    index=\"workplace-docs\"\n",
-    ")\n",
-    "\n",
-    "print(f\"Indexed {len(bulk_response['items'])} documents\")"
+    "vector_store = ElasticsearchStore.from_documents(\n",
+    "    docs,\n",
+    "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
+    "    es_user=ELASTIC_USERNAME, \n",
+    "    es_password=ELASTIC_PASSWORD,\n",
+    "    index_name=\"workplace_index\",\n",
+    "    embedding=embeddings\n",
+    ")"
    ]
   },
   {
@@ -300,23 +279,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.vectorstores.elastic_vector_search import ElasticKnnSearch\n",
     "from langchain.llms import OpenAI\n",
     "from langchain.chains import ConversationalRetrievalChain\n",
     "from lib.elasticsearch_chat_message_history import ElasticsearchChatMessageHistory\n",
     "from uuid import uuid4\n",
     "\n",
-    "store = ElasticKnnSearch(\n",
-    "    es_connection=elasticsearch_client,\n",
-    "    index_name=\"workplace-docs\",\n",
-    "    embedding=embeddings\n",
-    ")\n",
     "\n",
-    "retriever = store.as_retriever()\n",
+    "retriever = vector_store.as_retriever()\n",
     "\n",
     "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
@@ -328,7 +301,7 @@
     "\n",
     "session_id = str(uuid4())\n",
     "chat_history = ElasticsearchChatMessageHistory(\n",
-    "    client=elasticsearch_client,\n",
+    "    client=vector_store.client,\n",
     "    session_id=session_id,\n",
     "    index=\"workplace-docs-chat-history\"\n",
     ")"
@@ -345,23 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[CHAT SESSION ID] 09116274-f852-4ae6-9617-c5aa2a17bbff\n",
+      "[CHAT SESSION ID] 75557767-2a26-4cc0-9860-1d4868e2449b\n",
       "[QUESTION] What does NASA stand for?\n",
-      "[ANSWER]   NASA stands for North America South America region.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Code Of Conduct', 'Code Of Conduct', 'Swe Career Matrix']\n",
+      "[ANSWER]   NASA stands for North America South America.\n",
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Code Of Conduct', 'Code Of Conduct']\n",
       "[QUESTION] Which countries are part of it?\n",
-      "[ANSWER]   The North America South America region includes the United States, Canada, Mexico, as well as Central and South America.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview', 'Wfh Policy Update May 2023']\n",
+      "[ANSWER]   North America includes the United States, Canada, and Mexico. South America includes countries such as Brazil, Argentina, Peru, and Colombia.\n",
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview', 'Sales Organization Overview']\n",
       "[QUESTION] Who are the team's leads?\n",
       "[ANSWER]   Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
-      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Swe Career Matrix', 'Sales Organization Overview', 'Swe Career Matrix']\n"
+      "          [SUPPORTING DOCUMENTS] ['Sales Organization Overview', 'Sales Organization Overview', 'Swe Career Matrix', 'Swe Career Matrix']\n"
      ]
     }
    ],
@@ -400,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,12 +389,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'acknowledged': True})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "elasticsearch_client.indices.delete(index='workplace-docs')\n",
-    "elasticsearch_client.indices.delete(index='workplace-docs-chat-history')"
+    "vector_store.client.indices.delete(index='workplace_index')\n",
+    "vector_store.client.indices.delete(index='workplace-docs-chat-history')"
    ]
   }
  ],
@@ -441,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.3"
   },
   "orig_nbformat": 4
  },
