file rename and add review comments

--- a/notebooks/langchain/langchain-using-own-model.ipynb
+++ b/notebooks/langchain/langchain-using-own-model.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,13 @@
     "\n",
     "We will use ElasticsearchStore to connect to our elastic cloud deployment, This would help create and index data easily. In the constructor, we will explicity mention `query_field` and `vector_query_field`, to map our inference pipeline to source and target fields.\n",
     "\n",
-    "Note: For demonstration we will explicity set `strategy` to `ElasticsearchStore.ApproxRetrievalStrategy` although ElasticsearchStore uses ApproxRetrievalStrategy strategy by default.\n",
+    "Note: For demonstration we will explicity set strategy to `ElasticsearchStore.ApproxRetrievalStrategy` although ElasticsearchStore uses `ApproxRetrievalStrategy` strategy by default.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,11 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents = vector_store.from_documents(\n",
+    "documents = ElasticsearchStore.from_documents(\n",
     "    docs, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,   \n",
     "    index_name= \"approx-search-demo\",\n",
     "    query_field=\"text_field\",\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
