Add remaining content, cleanup, fixes

--- a/docs/integrations-hugging-face.mdx
+++ b/docs/integrations-hugging-face.mdx
@@ -6,5 +6,26 @@ image:
 description: Learn how to integrate ((es)) with Hugging Face
 date: 2023-09-07
 tags: ['n']
-related: ['integrationsOpenAI', 'integrationsLlamaIndex', 'integrationsLangChain']
+related: ['genaiIntegrationsOpenAI', 'genaiIntegrationsLlamaIndex', 'genaiIntegrationsLangChain']
 ---
+
+[Hugging Face](https://huggingface.co/docs) is an open-source hub dedicated to AI/ML models and tools, offering access to a vast collection of machine learning models.
+This platform makes it easy to incorporate specialized AI and ML functionalities into your applications.
+
+You can use Hugging Face models with ((es)) in two ways:
+
+### Transformers library
+
+Leverage the Transformers Python library to carry out inference within a Python backend environment.
+
+<DocCallOut>
+📒 Test it out in this [notebook](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/search/00-quick-start.ipynb)
+</DocCallOut>
+
+### Hosted models in ((es))
+
+Deploy Hugging Face models directly in ((es)) to perform inference within the ((es)) environment.
+
+<DocCallOut>
+📒 Test out this approach in this [notebook](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb).
+</DocCallOut>
