--- a/docs/integrations-llama-index.mdx
+++ b/docs/integrations-llama-index.mdx
@@ -6,5 +6,7 @@ image:
 description: Learn how to integrate ((es)) with LlamaIndex
 date: 2023-09-07
 tags: ['n']
-related: ['integrationsOpenAI', 'integrationsHuggingFace', 'integrationsLangChain']
+related: ['genaiIntegrationsOpenAI', 'genaiIntegrationsHuggingFace', 'genaiIntegrationsLangChain']
 ---
+
+<DocCallOut color="warning" title="👷🏼‍♀️ Coming soon" />
