--- a/docs/integrations-overview.mdx
+++ b/docs/integrations-overview.mdx
@@ -1,10 +1,40 @@
 ---
 id: genaiIntegrationsOverview
 slug: /vector-gen-ai/integrations-overview
-title: Integrations
+title: Generative AI integrations
 image:
 description: Learn how to integrate ((es)) with popular projects in the generative AI space.
 date: 2023-09-07
 tags: ['n']
-related: ['integrationsOpenAI', 'integrationsHuggingFace', 'integrationsLlamaIndex', 'integrationsLangChain']
+related: ['genaiIntegrationsOpenAI', 'genaiIntegrationsHuggingFace', 'genaiIntegrationsLlamaIndex', 'genaiIntegrationsLangChain']
 ---
+
+Integrate with popular projects in the generative AI space to use Elasticsearch as the backbone of your LLM-powered applications.
+
+For use cases like retrieval augmented generation (RAG), summarization, and question answering (QA).
+
+{/* TODO: Nice to have logos here for a bit of visual interest*/}
+
+<DocRelatedArticles
+  sectionTitle="Generative AI integrations"
+  items={
+    [
+      {
+        "pageId": "genaiIntegrationsOpenAI",
+        "description": " ",
+      },
+      {
+        "pageId": "genaiIntegrationsHuggingFace",
+        "description": " ",
+      },
+      {
+        "pageId": "genaiIntegrationsLangChain",
+        "description": " ",
+      },
+      {
+        "pageId": "genaiIntegrationsLlamaIndex",
+        "description": " "
+        }
+    ]
+  }
+/>
