--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -19,7 +19,7 @@ landingPageId='genaiQuickStart'
 It allows you to store and retrieve relevant information extremely quickly.
 ((es)) is used by many of the world's largest companies to power their search and analytics applications.
 
-You can use ((es)) as a **vector database** to store vector embeddings and use them to perform vector similarity search.
+You can use ((es)) as a **vector database** to store vector embeddings and perform vector similarity search.
 ((es)) supports many different types of queries, including full-text search, geospatial search, and more.
 
 ((es)) also enables tasks like question-answering, summarization, and classification by serving relevant context to generative AI models,
