--- a/docs/setup.mdx
+++ b/docs/setup.mdx
@@ -18,7 +18,7 @@ Learn how to use Docker for local development and testing, and Elastic Cloud for
 ### Use ((es)) with Docker
 
 <DocCallOut>
-    Recommended for local development and testing.
+    ℹ️ Recommended for local development and testing.
 </DocCallOut>
 
 The quickest way to get started developing with ((es)) is to use Docker. Run the following command to download and launch the official ((es)) Docker image:
@@ -34,7 +34,7 @@ docker run -p 9200:9200 \
 
 ((es)) is now running on http://localhost:9200.
 
-<DocCallOut color="warning">
+<DocCallOut color="warning" title="Licensing">
   We're using the trial licence which lasts for up to 30 days.
   Some features, like RRF and ((es)) ML inference, are not available with a basic licence.
   The basic licence is free forever.
@@ -44,7 +44,7 @@ docker run -p 9200:9200 \
 ### Use ((es)) with Elastic Cloud
 
 <DocCallOut>
-    Recommended for production use.
+   ℹ️ Recommended for production use.
 </DocCallOut>
 
 Elastic Cloud is the official hosted and managed ((es)) service, offering ((es)), Kibana, APM, and much more.
@@ -52,7 +52,7 @@ Elastic Cloud is available on AWS, GCP, and Azure.
 
 You can sign up for a free 14-day trial at https://cloud.elastic.co.
 
-<DocCallOut color="warning">
+<DocCallOut color="warning" title="Licensing">
   Cloud deployments have a Platinum licence by default.
 </DocCallOut>
 
