--- a/docs/integrations-lang-chain.mdx
+++ b/docs/integrations-lang-chain.mdx
@@ -6,5 +6,16 @@ image:
 description: Learn how to integrate ((es)) with LangChain
 date: 2023-09-07
 tags: ['n']
-related: ['integrationsOpenAI', 'integrationsLlamaIndex', 'integrationsHuggingFace']
+related: ['genaiIntegrationsOpenAI', 'genaiIntegrationsLlamaIndex', 'genaiIntegrationsHuggingFace']
 ---
+
+[LangChain](https://docs.langchain.com/docs/) is a popular framework for working with AI, Vectors, and embeddings. Used to simplify building a variety of AI applications.
+
+((es)) can be used with LangChain in two ways:
+
+- Use the LangChain VectorStore to store and retrieve documents from ((es))
+- Use the LangChain self-query retriever, with the help of an LLM like OpenAI, to transform a user's query into a query + filter to retrieve relevant documents from ((es)).
+
+<DocCallOut>
+📒 Test these approaches in our [Langchain notebooks](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/integrations/langchain).
+</DocCallOut>
