--- a/docs/using-elasticsearch-filtering.mdx
+++ b/docs/using-elasticsearch-filtering.mdx
@@ -8,3 +8,9 @@ date: 2023-09-07
 tags: []
 related: ['usingElasticsearchIndexing','usingElasticsearchQuerying', 'usingElasticsearchDataModeling', 'usingElasticsearchRelevance']
 ---
+
+Filtering allows you to filter the results of your query based on certain criteria. Filtering doesn't affect the score of the documents, but allows you to filter out documents that don't match the criteria, which should improve the performance of your query.
+
+<DocCallOut>
+📒 Test out filtering in [this notebook](https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/search/02-keyword-querying-filtering.ipynb).
+</DocCallOut>
